# SelfAssembler

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  claudonomous.yaml.example  pyproject.toml  run-autonomous.sh  selfassembler.yaml.example
.claude/skills/selfassembler/: SKILL.md
claudonomous/: __init__.py  __main__.py  cli.py  config.py  context.py  errors.py  executor.py  git.py  notifications.py  orchestrator.py  phases.py  state.py
claudonomous/templates/: plan.md  pr.md
claudonomous/templates/prompts/: planning.md
docs/: AI_USAGE.md  configuration.md  phases.md  troubleshooting.md
selfassembler/: __init__.py  __main__.py  cli.py  commands.py  config.py  context.py  error_classifier.py  errors.py  executor.py  git.py  notifications.py  orchestrator.py  phases.py  rules.py  state.py
selfassembler/debate/: __init__.py  files.py  orchestrator.py  prompts.py  results.py  transcript.py  utils.py
selfassembler/executors/: __init__.py  base.py  claude.py  codex.py  factory.py
selfassembler/templates/: plan.md  pr.md
selfassembler/templates/prompts/: implementation.md  research.md  review.md
tests/: __init__.py  test_cli.py  test_commands.py  test_config.py  test_context.py  test_debate.py  test_debate_orchestrator.py  test_error_classifier.py  test_errors.py  test_executor.py  test_fallback.py  test_git.py  test_integration.py  test_phases.py  test_rules.py  test_state.py
tests/test_executors/: __init__.py  test_base.py  test_claude.py  test_codex.py  test_factory.py
